--- a/index.html
+++ b/index.html
@@ -7,28 +7,26 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<main>
+  <section>
+    <div class="content">
+      <img src="" alt="Profile Picture">
+      <h2>Jessica Randall</h2>
+      <span>London, United Kingdom</span>
+      <p>"Front-end developer and avid reader."</p>
+    </div>
+    <div class="links">
+      <a href="/">
+        GitHub</a>
+      <a href="/">Frontend Mentor</a>
+      <a href="/">LinkedIn</a>
+      <a href="/">Twitter</a>
+      <a href="/">Instagram</a>
+    </div>
+  </section>
+</main>
 </body>
 </html>
