--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
   <section>
     <div class="content">
-      <img src="" alt="Profile Picture">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="Profile Picture">
       <h2>Jessica Randall</h2>
       <span>London, United Kingdom</span>
       <p>"Front-end developer and avid reader."</p>
